feat: implement find room by id
